--- a/docs/assets/styles/_components.scss
+++ b/docs/assets/styles/_components.scss
@@ -15,6 +15,11 @@
   border-radius: 20px;
   cursor: pointer;
   transition: background-color 0.3s ease, border-color 0.3s ease;
+
+  &.dark {
+    background-color: $background-dark;
+    border-color: $secondary-color;
+  }
 }
 
 .toggle-switch {
@@ -24,17 +29,22 @@
   background: $secondary-color;
   border-radius: 50px;
   transition: background 0.3s ease;
-}
 
-.toggle-switch::before {
-  content: "";
-  position: absolute;
-  width: 20px;
-  height: 20px;
-  top: 50%;
-  left: 5px;
-  background: white;
-  border-radius: 50%;
-  transform: translateY(-50%);
-  transition: all 0.3s ease;
+  &::before {
+    content: "";
+    position: absolute;
+    width: 20px;
+    height: 20px;
+    top: 50%;
+    left: 5px;
+    background: white;
+    border-radius: 50%;
+    transform: translateY(-50%);
+    transition: all 0.3s ease;
+  }
+
+  &.dark::before {
+    left: calc(100% - 25px);
+    background: $primary-color;
+  }
 }
